--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </header>
     <main>
         <section id="about" class="fade-in">
-            <h2>About Me</h2>
-            <p>Welcome to my portfolio! I'm coldtapwater, a developer with a passion for creating engaging and innovative web experiences.</p>
+            <h2>aboutMe</h2>
+            <p>Welcome to my portfolio! I’m coldtapwater, an electrical engineering student and developer with a passion for creating engaging, innovative web experiences and smart solutions. With a strong background in coding, AI, and system-level projects, I thrive on solving complex problems and building projects that blend functionality with creativity. Whether it’s crafting seamless user interfaces or developing advanced Discord bots, I’m always exploring new technologies to push the boundaries of what’s possible.</p>
         </section>
         <section id="projects" class="fade-in">
-            <h2>Projects</h2>
+            <h2>projects</h2>
             <div id="project-container">
                 <!-- Project cards will be dynamically added here -->
             </div>
         </section>
         <section id="contact" class="fade-in">
-            <h2>Contact</h2>
+            <h2>contact</h2>
             <p>Get in touch with me at: <a href="mailto:contact@coldtapwater.dev">contact@coldtapwater.dev</a></p>
         </section>
     </main>
